Fixed navigation links visibility

--- a/src/views/Quiz/Quiz.css
+++ b/src/views/Quiz/Quiz.css
@@ -13,4 +13,5 @@
 
 .Quiz .banner .score {
   margin-left: auto;
+  margin-right: 3px;
 }
